[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify_action_validator"
version = "0.1.0"
description = "Spotify Action Validator for Pyodide"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["actionValidator*"]
